--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="title_activity_description">DescriptionActivity</string>
 
     <string name="so_you_think_its_over">So you think you can answer the tricky questions? So you think you can recall your memory faster and arrange the puzzle? So you think you are fast enough to run all around the campus and unravel the mystery? Think again!</string>
-    <string name="steal_jobs">This is a tailor made event for anyone who would like to taste the process of graduate stepping into the corporate world.
+    <string name="sj">This is a tailor made event for anyone who would like to taste the process of graduate stepping into the corporate world.
 What are the companies looking in an eligible candidate? Find out for yourself in this simulation of a college placement drive</string>
     <string name="tech_mark">Have a knowledge about products in the market or want to learn about them ? Have any products in mind to showcase?  Grab your socks and pull up to  have much fun !! </string>
     <string name="vaksamara">You think you have all the skills to beat down your opponent with an argument?!Then what are you waiting for...Here\'s the great opportunity to explore your speaking skills!So do not wait...say it straight in VAKSAMARA</string>
